--- a/02.2.1-ml-twotower-model.ipynb
+++ b/02.2.1-ml-twotower-model.ipynb
@@ -967,12 +967,12 @@
         "train.to_ddf().head()"
       ],
       "metadata": {
-        "id": "z3Le1RTQfqTM",
-        "outputId": "09b9486e-3e5b-431a-c0a2-bef4cd49d315",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "z3Le1RTQfqTM",
+        "outputId": "09b9486e-3e5b-431a-c0a2-bef4cd49d315"
       },
       "id": "z3Le1RTQfqTM",
       "execution_count": 11,
@@ -1302,10 +1302,10 @@
       ],
       "metadata": {
         "id": "n74DaZBghQuC",
-        "outputId": "18605063-a54d-42f2-a7bc-d647c903b929",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "18605063-a54d-42f2-a7bc-d647c903b929"
       },
       "id": "n74DaZBghQuC",
       "execution_count": 19,
@@ -1328,12 +1328,12 @@
         "embeddings"
       ],
       "metadata": {
-        "id": "QE3Cf_ltf8qf",
-        "outputId": "b8ff7306-b373-4426-9a12-d3a264f561ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
-        }
+        },
+        "id": "QE3Cf_ltf8qf",
+        "outputId": "b8ff7306-b373-4426-9a12-d3a264f561ae"
       },
       "id": "QE3Cf_ltf8qf",
       "execution_count": 20,
@@ -1716,12 +1716,12 @@
         "schema"
       ],
       "metadata": {
-        "id": "kRFnJbvLGHuA",
-        "outputId": "f0ffbf95-d007-41d0-f4fb-3687b056668f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
-        }
+        },
+        "id": "kRFnJbvLGHuA",
+        "outputId": "f0ffbf95-d007-41d0-f4fb-3687b056668f"
       },
       "id": "kRFnJbvLGHuA",
       "execution_count": 25,
@@ -1959,12 +1959,12 @@
         "schema"
       ],
       "metadata": {
-        "id": "fJbuebElHey8",
-        "outputId": "8265726d-87a7-4d36-d4ae-ddd25e9382f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
-        }
+        },
+        "id": "fJbuebElHey8",
+        "outputId": "8265726d-87a7-4d36-d4ae-ddd25e9382f0"
       },
       "id": "fJbuebElHey8",
       "execution_count": 26,
@@ -2273,19 +2273,20 @@
         "id": "fdDTWeCHHhNI"
       },
       "id": "fdDTWeCHHhNI",
-      "execution_count": 30,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
-        "model.compile(optimizer=\"adam\", run_eagerly=False, metrics=[mm.RecallAt(10), mm.NDCGAt(10), tf.keras.metrics.AUC()])\n",
-        "model.fit(train, validation_data=valid, batch_size=64, epochs=5)"
+        "opt = tf.keras.optimizers.Adam(learning_rate=1e-2)\n",
+        "model.compile(optimizer=opt, run_eagerly=False, metrics=[mm.RecallAt(10), mm.NDCGAt(10), tf.keras.metrics.AUC()])\n",
+        "history = model.fit(train, validation_data=valid, batch_size=64, epochs=5)"
       ],
       "metadata": {
         "id": "6KPUbfd0HnV1",
-        "outputId": "e824acb4-9134-4d0b-c5f2-d770a7c2a25a",
+        "outputId": "dc4e4daf-cf9f-4fd5-e74b-c18598a57d84",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2312,10 +2313,90 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "1250/1250 [==============================] - 40s 27ms/step - loss: 3.6910 - auc: 0.6195 - recall_at_10: 0.4357 - ndcg_at_10: 0.2254 - regularization_loss: 0.0000e+00 - loss_batch: 3.6911 - val_loss: 4.3334 - val_auc: 0.5175 - val_recall_at_10: 0.1858 - val_ndcg_at_10: 0.0864 - val_regularization_loss: 0.0000e+00 - val_loss_batch: 2.6666\n",
+            "1250/1250 [==============================] - 94s 44ms/step - loss: 4.1571 - auc_6: 0.5000 - recall_at_10: 0.7372 - ndcg_at_10: 0.7372 - regularization_loss: 0.0000e+00 - loss_batch: 4.1571 - val_loss: 70.2601 - val_auc_6: 0.5000 - val_recall_at_10: 1.0000 - val_ndcg_at_10: 0.8986 - val_regularization_loss: 0.0000e+00 - val_loss_batch: 406.7476\n",
             "Epoch 2/5\n",
-            "  14/1250 [..............................] - ETA: 21s - loss: 3.6478 - auc: 0.6454 - recall_at_10: 0.4294 - ndcg_at_10: 0.2214 - regularization_loss: 0.0000e+00 - loss_batch: 3.6478"
+            "1250/1250 [==============================] - 35s 26ms/step - loss: 4.1572 - auc_6: 0.5000 - recall_at_10: 0.7619 - ndcg_at_10: 0.7619 - regularization_loss: 0.0000e+00 - loss_batch: 4.1572 - val_loss: 65.4402 - val_auc_6: 0.5000 - val_recall_at_10: 1.0000 - val_ndcg_at_10: 0.8982 - val_regularization_loss: 0.0000e+00 - val_loss_batch: 390.7302\n",
+            "Epoch 3/5\n",
+            "1250/1250 [==============================] - 34s 25ms/step - loss: 4.1571 - auc_6: 0.5000 - recall_at_10: 0.7527 - ndcg_at_10: 0.7527 - regularization_loss: 0.0000e+00 - loss_batch: 4.1572 - val_loss: 77.7764 - val_auc_6: 0.5000 - val_recall_at_10: 1.0000 - val_ndcg_at_10: 0.8935 - val_regularization_loss: 0.0000e+00 - val_loss_batch: 465.1583\n",
+            "Epoch 4/5\n",
+            "1250/1250 [==============================] - 38s 27ms/step - loss: 4.1572 - auc_6: 0.5000 - recall_at_10: 0.7726 - ndcg_at_10: 0.7726 - regularization_loss: 0.0000e+00 - loss_batch: 4.1572 - val_loss: 78.2287 - val_auc_6: 0.5000 - val_recall_at_10: 1.0000 - val_ndcg_at_10: 0.8947 - val_regularization_loss: 0.0000e+00 - val_loss_batch: 455.2223\n",
+            "Epoch 5/5\n",
+            " 532/1250 [===========>..................] - ETA: 16s - loss: 4.1572 - auc_6: 0.5000 - recall_at_10: 0.6966 - ndcg_at_10: 0.6966 - regularization_loss: 0.0000e+00 - loss_batch: 4.1572"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history.history"
+      ],
+      "metadata": {
+        "id": "rjysc1IntlDk",
+        "outputId": "c5cf190a-c652-4d66-b552-0b4096665648",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "rjysc1IntlDk",
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'loss': [4.157214641571045,\n",
+              "  4.157159805297852,\n",
+              "  4.157199382781982,\n",
+              "  4.15723180770874,\n",
+              "  4.157191276550293],\n",
+              " 'auc_5': [0.5, 0.5, 0.5, 0.5, 0.5004699230194092],\n",
+              " 'recall_at_10': [0.823199987411499,\n",
+              "  0.8248000144958496,\n",
+              "  0.7919999957084656,\n",
+              "  0.7440000176429749,\n",
+              "  0.7386375069618225],\n",
+              " 'ndcg_at_10': [0.823199987411499,\n",
+              "  0.8248000144958496,\n",
+              "  0.7919999957084656,\n",
+              "  0.7440000176429749,\n",
+              "  0.7378268837928772],\n",
+              " 'regularization_loss': [0.0, 0.0, 0.0, 0.0, 0.0],\n",
+              " 'loss_batch': [4.157838821411133,\n",
+              "  4.156914710998535,\n",
+              "  4.158390998840332,\n",
+              "  4.156350135803223,\n",
+              "  4.156854629516602],\n",
+              " 'val_loss': [124.23328399658203,\n",
+              "  83.68626403808594,\n",
+              "  115.26092529296875,\n",
+              "  133.5514678955078,\n",
+              "  75.48359680175781],\n",
+              " 'val_auc_5': [0.5000507831573486,\n",
+              "  0.500053882598877,\n",
+              "  0.5000523328781128,\n",
+              "  0.5000523328781128,\n",
+              "  0.5000022053718567],\n",
+              " 'val_recall_at_10': [0.9998000264167786,\n",
+              "  0.9986000061035156,\n",
+              "  1.0,\n",
+              "  0.9986000061035156,\n",
+              "  0.005100000184029341],\n",
+              " 'val_ndcg_at_10': [0.9007440209388733,\n",
+              "  0.8959219455718994,\n",
+              "  0.8966220617294312,\n",
+              "  0.8990225791931152,\n",
+              "  0.005100000184029341],\n",
+              " 'val_regularization_loss': [0.0, 0.0, 0.0, 0.0, 0.0],\n",
+              " 'val_loss_batch': [953.1146850585938,\n",
+              "  622.1981811523438,\n",
+              "  921.9033813476562,\n",
+              "  834.5936279296875,\n",
+              "  413.11700439453125]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
         }
       ]
     },
